force-app/main/default/objects/Bypass_Settings__c/fields/Product_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Product_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product - Trigger</label>
    <type>Checkbox</type>
</CustomField>