force-app/main/default/objects/Bypass_Settings__c/fields/Product_WF__c.field-meta.xml
<CustomField>
    <fullName>Product_WF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product - WF</label>
    <type>Checkbox</type>
</CustomField>