force-app/main/default/objects/Bypass_Settings__c/fields/Product_WF_Inform_Price_Sensitivity__c.field-meta.xml
<CustomField>
    <fullName>Product_WF_Inform_Price_Sensitivity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product - WF - Inform Price Sensitivity</label>
    <type>Checkbox</type>
</CustomField>