force-app/main/default/objects/Bypass_Settings__c/fields/SProduct_Trigger__c.field-meta.xml
<CustomField>
    <fullName>SProduct_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SProduct - Trigger</label>
    <type>Checkbox</type>
</CustomField>