force-app/main/default/objects/Bypass_Settings__c/fields/SProduct_Trigger_Propagate_SP__c.field-meta.xml
<CustomField>
    <fullName>SProduct_Trigger_Propagate_SP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SProduct - Trigger - Propagate SP</label>
    <type>Checkbox</type>
</CustomField>