force-app/main/default/objects/Bypass_Settings__c/fields/SProduct_VR__c.field-meta.xml
<CustomField>
    <fullName>SProduct_VR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SProduct - VR</label>
    <type>Checkbox</type>
</CustomField>