force-app/main/default/objects/Bypass_Settings__c/fields/SProduct_VR_Cannot_Edit_PP_Over_5__c.field-meta.xml
<CustomField>
    <fullName>SProduct_VR_Cannot_Edit_PP_Over_5__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SProduct - VR - Cannot Edit PP Over 5</label>
    <type>Checkbox</type>
</CustomField>